# rust-mssql-stored-proc

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
sql/: Dockerfile  init.sql  start.sh
sql/data/: CreateStoredProc.sql  CreateTables.sql  IncrementorData.csv
src/: main.rs
